--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: install nodejs
+        uses: actions/setup-node@v3.4.1
+        with: 
+          node-version: "14.X"
+      - name: install deps
+        run: npm install
+      - name: build app
+        run : npm run build
+      - name: build
+        uses: sebastianpopp/ftp-action@v2.0.0
+        with:
+          host: 218.247.86.199
+          user: ipanftp
+          password: k3u8h4i7
+          localDir: ./dist
+          remoteDir: wwwroot/public
+          options: "--delete --asci"
